--- a/index.html
+++ b/index.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
+    html, body {
       margin: 0;
-      background-color: black;
+      padding: 0;
+      background: transparent;
       overflow: hidden;
     }
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      width: 100vw;
-      height: 100vh;
+    .scale-box {
+      width: 640px;  /* Tamaño real del iframe */
+      height: 360px;
+      transform: scale(0.4);  /* Escala visible más pequeña */
+      transform-origin: top left;
     }
     iframe {
-      width: 100%;
-      height: 100%;
+      width: 640px;
+      height: 360px;
       border: none;
     }
-    /* Ocultamos 3 iframes */
-    .hide { visibility: hidden; }
   </style>
 </head>
 <body>
-  <div class="grid">
-    <iframe class="hide" src="https://vdo.ninja/?view=dXPDPLU&pw=12345&cleanoutput=1&noaudio=1"></iframe>
-    <iframe class="hide" src="https://vdo.ninja/?view=dXPDPLU&pw=12345&cleanoutput=1&noaudio=1"></iframe>
-    <iframe class="hide" src="https://vdo.ninja/?view=dXPDPLU&pw=12345&cleanoutput=1&noaudio=1"></iframe>
-    <iframe src="https://vdo.ninja/?view=dXPDPLU&pw=12345&cleanoutput=1&noaudio=1"></iframe>
+  <div class="scale-box">
+    <iframe src="https://vdo.ninja/?view=dXPDPLU&pw=12345&cleanoutput=1&noaudio=1&clean=1"></iframe>
   </div>
 </body>
 </html>
