--- a/index.html
+++ b/index.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Señal Remota</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: transparent;
-      overflow: hidden;
-    }
-    .scale-box {
-      width: 640px;  /* Tamaño real del iframe */
-      height: 360px;
-      transform: scale(0.4);  /* Escala visible más pequeña */
-      transform-origin: top left;
+      height: 100%;
+      background: black;
     }
     iframe {
-      width: 640px;
-      height: 360px;
       border: none;
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 <body>
-  <div class="scale-box">
-    <iframe src="https://vdo.ninja/?view=dXPDPLU&pw=12345&cleanoutput=1&noaudio=1&clean=1"></iframe>
-  </div>
+  <iframe src="https://vdo.ninja/?view=dXPDPLU&pw=12345&fit=cover&crop=16:9" allow="camera; microphone; autoplay"></iframe>
 </body>
 </html>
