--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Señal Remota</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vista Remota</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
       background: black;
+      height: 100%;
+      overflow: hidden;
     }
     iframe {
       border: none;
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
     }
   </style>
 </head>
 <body>
-  <iframe src="https://vdo.ninja/?view=dXPDPLU&pw=12345&fit=cover&crop=16:9" allow="camera; microphone; autoplay"></iframe>
+  <iframe 
+    src="https://vdo.ninja/?view=dXPDPLU&pw=12345&fit=cover&crop=16:9" 
+    allow="camera; microphone; fullscreen" 
+    allowfullscreen>
+  </iframe>
 </body>
 </html>
