--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <iframe 
-    src="https://vdo.ninja/?view=dXPDPLU&pw=12345&fit=cover&crop=16:9" 
+    src="https://vdo.ninja/?view=dXPDPLU&fit=cover&crop=16:9" 
     allow="camera; microphone; fullscreen" 
     allowfullscreen>
   </iframe>
